# zng-template

./: .gitignore  .zng-template  .zng-template-ignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: about.toml  config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: template-ci.yml
.zng-template/: ignore  keys
.zng-template/post/: post.sh
assets/: README.md
crates/: README.md
crates/cli/: Cargo.toml
crates/gui/: Cargo.toml
crates/gui/src/: crash.rs  lib.rs  primary.rs  settings.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: config.rs  env.rs  l10n.rs  lib.rs  res.rs
crates/t-app-t/: Cargo.toml  build.rs
crates/t-app-t-mobile/: Cargo.toml  build.rs
crates/t-app-t-mobile/src/: lib.rs
crates/t-app-t/src/: cli.rs  config.rs  crash.rs  l10n.rs  log.rs  main.rs
pack/: README.md
pack/android/: AndroidManifest.xml.zr-rp  build.zr-apk  lib.zr-copy
pack/android/apk/: AndroidManifest.xml.zr-rp  lib.zr-copy
pack/android/apk/assets/: res.zr-copy
pack/android/apk/res/: values-l10n.zr-sh
pack/android/apk/res/mipmap-hdpi/: icon.png.zr-copy
pack/common/: check.zr-sh
pack/common/res/: config.zr-glob  l10n.zr-sh  settings.zr-glob
pack/common/res/l10n/: fluent-files.zr-glob
pack/deb/: t-app-t.deb.zr-shf
pack/deb/t-app-t/DEBIAN/: control.zr-rp
pack/deb/t-app-t/usr/share/applications/: t-app-t.desktop.zr-rp
pack/deb/t-app-t/usr/share/doc/t-app-t/: changelog.gz.zr-sh  copyright.zr-rp
pack/deb/t-app-t/usr/share/icons/hicolor/256x256/apps/: t-app-t.png.zr-copy
pack/deb/t-app-t/usr/share/icons/hicolor/64x64/apps/: t-app-t.png.zr-copy
pack/deb/t-app-t/usr/share/man/: t-app-t.1.gz.zr-sh
pack/deb/t-app-t/usr/share/man/man1/: t-app-t.1.gz.zr-sh
pack/deb/t-app-t/usr/share/pixmaps/: t-app-t.png.zr-copy
pack/macos/: t-app-t.dmg.zr-shf
pack/macos/t-app-t.app/Contents/: info.plist.zr-rp
pack/macos/t-app-t.app/Contents/MacOS/: t-app-t.zr-copy
pack/macos/t-app-t.app/Contents/Resources/: common.zr-glob  iconfile.icns  iconfile.icns.zr-copy
pack/portable/: bin.zr-glob  mkdirs.zr-sh  t-app-t.res-dir  test.xt.zr-rp
pack/portable-tar/: t-app-t.tar.gz.zr-shf  t-app-t.zr-copy
pack/tarball/: t-app-t.tar.gz.zr-shf
pack/windows/: build.zr-shf
pack/windows/setup/: files.zr-copy  setup.iss.zr-rp
pack/windows/setup/res/: icon.ico.zr-copy  images.zr-glob
res/: README.md
res/l10n/: README.md
res/l10n/en-US/: primary.ftl  settings.ftl
res/l10n/pseudo/: crash_dialog.ftl  primary.ftl  primary_win.ftl
res/l10n/pseudo-mirr/: crash_dialog.ftl  primary.ftl  primary_win.ftl
res/l10n/pseudo-wide/: crash_dialog.ftl  primary.ftl  primary_win.ftl
res/l10n/pt-BR/: crash_dialog.ftl  primary.ftl  primary_win.ftl  settings.ftl
res/l10n/template/: crash_dialog.ftl  primary.ftl  primary_win.ftl
tools/: README.md
tools/cargo-do/: Cargo.toml
tools/cargo-do-pack/: Cargo.toml
tools/cargo-do-pack/src/: main.rs  pack_android.rs  pack_common.rs  pack_deb.rs  pack_windows.rs
tools/cargo-do/src/: help.rs  main.rs  pack_android.rs  pack_deb.rs  util.rs
tools/cargo-zng-res/: Cargo.toml
tools/tools-util/: Cargo.toml
tools/tools-util/src/: lib.rs
