[workspace]
resolver = "2"

# all crates in the project build to same target
members = ["crates/*", "tools/*"]
# only these crates are part of the final executable
default-members = ["crates/*"]

[profile.release]
# use `cargo do build-release` or `cargo do run-release` to build with release features.
lto = "fat"
codegen-units = 1

# set versions for dependencies used by multiple workspace crates
# features are defined on each crate, per build profile
[workspace.dependencies]
zng = { version = "0.16.1", default-features = false }
tracing = "0.1"
