[package]
name = "gui"
version = "0.0.0-local"
edition = "2024"

[lib]
# cdylib is used by hot_reload
crate-type = ["lib", "cdylib"]

[dependencies]
shared = { path = "../shared" }
zng = { workspace = true, features = ["material_icons"] }
tracing.workspace = true

[features]
dev = [
    # enable hot reload in dev builds
    "zng/hot_reload",
    # `shared` dependency enables "zng/default" for dev builds
]
release = [
    # `shared`dependency enables "zng/default" for release builds
    # you can set only the used features here to optimize binary size
]
