[package]
name = "shared"
version = "0.0.0-local"
edition = "2024"

[dependencies]
zng.workspace = true
tracing.workspace = true

# dependency license collection & bundling in builds with `features=bundle_licenses`.
zng-tp-licenses = { version = "0.7", features = ["bundle"], optional = true }
[build-dependencies]
zng-tp-licenses = { version = "0.7", features = ["build"], optional = true }

[features]
dev = [
    # enable all default features in dev builds
    "zng/default",
    "zng/config_json",
]
release = [
    # Collect and bundle crate licenses
    "dep:zng-tp-licenses",
    # enable default features in release builds, 
    # you can replace this with only features used to optimize binary size
    "zng/default",
    "zng/config_json",
]
