[package]
name = "t-app-t-mobile"
version = "0.1.0"
edition = "2024"
license = "TODO"

[lib]
# required by Android
crate-type = ["cdylib"]

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
# [dependencies]
# target dependencies to avoid building Zng again for desktop with 'cargo build'
# note that iOS is currently not officially supported

shared = { path = "../shared" }

# gui
zng = { workspace = true, features = ["view", "android_native_activity"] }
gui = { path = "../gui" }

# log
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
default = ["dev"]

# default features in debug builds
dev = [
    "shared/dev", 
    "gui/dev",
    # `shared` dependency enables "zng/default" for dev builds
]

# default features in release builds (using `cargo-do`)
release = [
    "shared/release", 
    "gui/release",
    # `shared`dependency enables "zng/default" for release builds
    # you can set only the used features here to optimize binary size
]

# default features in release builds optimized for size (using `cargo-do`)
release-z = [
    "release",
    "zng/dyn_app_extension",
]