[package]
name = "t-app-t"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
zng = { workspace = true, features = ["view_prebuilt"] }

# log
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# cli
clap = { version = "4.5", features = ["env", "derive"] }
dotenv = "0.15"

[features]
default = ["dev"]

# default features in debug builds
dev = ["zng/inspector"]

# default features in release builds (using `cargo-do`)
release = []
