[package]
name = "t-app-t"
version = "0.1.0"
edition = "2024"
license = "TODO"
[package.metadata.zng.about]
app = "{{app}}"
org = "{{org}}"
app_id = "rs.zng.t-org-t.t-app-t"

[dependencies]
shared = { path = "../shared" }

# gui
zng = { workspace = true }
gui = { path = "../gui" }
rfd = "0.14"

# log
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# cli
clap = { version = "4.5", features = ["env", "derive"] }
dotenv = "0.15"

# packaging
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = ["dev"]

# default features in debug builds
dev = [
    "shared/dev", 
    "gui/dev",
    # use prebuilt view in dev builds for better perf
    "zng/view_prebuilt",
    # `shared` dependency enables "zng/default" for dev builds
]

# default features in release builds (using `cargo-do`)
release = [
    "shared/release", 
    "gui/release",
    # use prebuilt view in release builds to avoid installing external dependencies
    # replace with "zng/view" to optimize binary size
    "zng/view_prebuilt",
    # `shared`dependency enables "zng/default" for release builds
    # you can set only the used features here to optimize binary size
]

# default features in release builds optimized for size (using `cargo-do`)
release-z = [
    "release",
]